--- a/Rent-Application/house_rent_application/web/index.html
+++ b/Rent-Application/house_rent_application/web/index.html
@@ -52,7 +52,7 @@
     var firebaseConfig = {
   apiKey: "AIzaSyCRuM3rotk09XECjrDEywdrjnigzX8Nj84",
   authDomain: "rent-app-9c17c.firebaseapp.com",
-  //databaseURL: "https://rent-app-9c17c-default-rtdb.firebaseio.com",
+  databaseURL: "https://rent-app-9c17c-default-rtdb.firebaseio.com",
   projectId: "rent-app-9c17c",
   storageBucket: "rent-app-9c17c.appspot.com",
   messagingSenderId: "380116515352",
